# adversarial-ml

./: .gitignore  README.md  pyproject.toml  requirements.txt  utils.py
adv_utils/: __init__.py  data.py  fgsm.py  hugging.py  sample.py  utils.py
adv_utils/adv_attacks/: __init__.py  base.py  fgsm.py  pgd.py
adv_utils/adv_train/: __init__.py  base.py  hugging.py
adv_utils/attacks/: __init__.py  base.py  fgsm.py  pgd.py
config/: adv_train.yaml  std_train.yaml  train_adv.yaml  train_std.yaml
notebooks/: adv_attacks_art.ipynb  adv_attacks_hf.ipynb  adv_attacks_pt.ipynb  adv_train.ipynb  adv_train_hf.ipynb  attacks.ipynb  attacks_hf.ipynb  attacks_pt.ipynb  intro.ipynb
scripts/: main.py
